--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -1,10 +1,5 @@
 steps:
     - name:'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint:'bash'
-    args:-'-c'
-        - |
-          gcloud config set app/cloud_build_timeout 3600 \
-          && gcloud app deploy -q --promote -v=721059036331 \
-          --project=portail-education-ml
-
+    args: ["app", "deploy"]
 timeout: '3600s'
