--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -1,1 +1,8 @@
 steps:
+    - name:'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    - entrypoint:'bash'
+    args:
+        - '-c'
+        - |
+          gcloud app deploy -q --promote -v=721059036331 \
+          --project=portail-education-ml
