--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -1,8 +1,7 @@
 steps:
     - name:'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint:'bash'
-    args:
-        - '-c'
+args:'-c'
         - |
           gcloud app deploy -q --promote -v=721059036331 \
           --project=portail-education-ml
